Add selection and groupd dividing logic

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 	--s-70: 56px;
 
 	--color-active: #00a3be;
+	--color-active-hover: #05778f;
 	--color-passive: #f9fafc;
 	--color-passive-hover: #eceef4;
 	--color-border: #cdd0e0;
