--- a/src/lib/SelectMenu/SelectMenu.module.css
+++ b/src/lib/SelectMenu/SelectMenu.module.css
@@ -4,6 +4,7 @@
 }
 
 .select {
+	font-size: var(--size-2);
 	min-width: 100px;
 	width: fit-content;
 	height: 32px;
@@ -31,16 +32,33 @@
 	box-shadow: var(--box-shadow);
 	border: 1px solid var(--color-border);
 	border-radius: var(--border-radius);
+	cursor: pointer;
 }
 
-.items {
+.item {
+	width: 100%;
 	height: var(--s-30);
+	margin: var(--s-5) var(--s-20) var(--s-5) 0;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	cursor: default;
 }
 
-.items:hover {
+.passiveOuterItem:hover {
 	background-color: var(--color-passive-hover);
+}
+
+.activeOuterItem:hover {
+	background-color: var(--color-active-hover);
+}
+
+.itemActive {
+	background-color: var(--color-active);
+	color: white;
+}
+
+.divider {
+	width: 100%;
+	height: 1px;
+	border-bottom: 1px solid var(--color-border);
 }
