--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,17 @@
 
 	--color-active: #00a3be;
 	--color-active-hover: #05778f;
-	--color-passive: #f9fafc;
-	--color-passive-hover: #eceef4;
-	--color-border: #cdd0e0;
+
+	--color-light-select: #ffffff;
+	--color-light-passive: #f9fafc;
+	--color-light-passive-hover: #eceef4;
+	--color-light-border: #cdd0e0;
+
+	--color-dark-select: #191d2f;
+	--color-dark-passive: #27293c;
+	--color-dark-passive-hover: #3a3c52;
+	--color-dark-border: #585c77;
+
 	--border-radius: 4px;
 	--box-shadow: 0px 2px 8px 0px #6e749226;
 }
